Fix overflowing card

--- a/src/app/components/home/quiz/quiz.component.css
+++ b/src/app/components/home/quiz/quiz.component.css
@@ -1,7 +1,3 @@
-mat-card {
-  width: 100%
-}
-
 mat-radio-button {
   display: block;
   margin-bottom: 1em;
